Added 'projects' folder to allow for multiple experiments.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Parallax Experiment</title>
+    <title>Image Effects</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div id="bubbles1"></div>
-    <div id="bubbles2"></div>
-    <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.11.0/bodymovin.min.js'></script> -->
-   
-    <script src="js/index.js"></script>
+    <div id="container">
+    	<h2 class='title'>Image Effects 2018</h2>
+    	<ul>
+    		<li><a href="projects/parallax-01/index.html">Parallax 01</a></li>
+    	</ul>
+        <ul>
+            <li><a href="projects/zoom/index.html">Zoom</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
