--- a/projects/zoom/index.html
+++ b/projects/zoom/index.html
@@ -9,29 +9,19 @@
 </head>
 
 <body>
-    <h3>Use your mouse to rollover the letters of the Olice logo</h3>
+    <h3>Zoom Effect</h3>
     <div id="container">
-        <div id="animation-container">
-            <div class="anim-letter" id="anim-o"></div>
-            <div class="anim-letter" id="anim-l"></div>
-            <div class="anim-letter" id="anim-i"></div>
-            <div class="anim-letter" id="anim-c"></div>
-            <div class="anim-letter" id="anim-e"></div>
-            <div class="anim-letter" id="anim-dot"></div>
-        </div>
-        <div class="hover-container">
-            <div class="hover" id="hover-o"></div>
-            <div class="hover" id="hover-l"></div>
-            <div class="hover" id="hover-i"></div>
-            <div class="hover" id="hover-c"></div>
-            <div class="hover" id="hover-e"></div>
-            <div class="hover" id="hover-dot"></div>
-        </div>
+        <div class="photo-container">
+                <div class="photo">
+                  <img src="img/photos/6.jpg" alt="A ferris wheel"> 
+                </div>
+            </div>  
     </div>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.11.0/bodymovin.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js'></script>
-    
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+   
    
     <script src="js/index.js"></script>
 </body>
