--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     		<li><a href="projects/parallax-01/index.html">Parallax 01</a></li>
     	</ul>
         <ul>
+            <li><a href="projects/parallax-02/index.html">Parallax 02</a></li>
+        </ul>
+        <ul>
             <li><a href="projects/zoom/index.html">Zoom</a></li>
         </ul>
     </div>
