--- a/projects/parallax-03/index.html
+++ b/projects/parallax-03/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <div id="bubbles1"></div>
-    <div id="bubbles2"></div>
-    
+	<div id="container">
+    	<div id="back"></div>
+    	<div id="fore"></div>
+	</div>
     <script src="js/index.js"></script>
 </body>
 
