Parallax demo with Olice tile images. Sizing not accurate.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
 
 <body>
     <div id="container">
-    	<h2 class='title'>Image Effects 2018</h2>
+    	<h2 class='title'>Olice Website - Tiles</h2>
         <ul>
-            <li><a href="projects/parallax-02/index.html">Parallax 01</a></li>
-        </ul>
-    	<ul>
-    		<li><a href="projects/parallax-02/index.html">Parallax 02</a></li>
-    	</ul>
-        <ul>
-            <li><a href="projects/parallax-03/index.html">Parallax 03</a></li>
+            <li><a href="projects/parallax-03/index.html">Parallax</a></li>
         </ul>
         <ul>
             <li><a href="projects/zoom/index.html">Zoom</a></li>
