--- a/projects/parallax-03/index.html
+++ b/projects/parallax-03/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-	<div id="container">
-    	<div id="back"></div>
-    	<div id="fore"></div>
+	<div class="container">
+		<div class="tile">
+	    	<img src="img/tile1/mobile-content-5.png" id="back">
+	    	<img src="img/tile1/mobile-phone-6.png" id="fore">
+		</div>
 	</div>
     <script src="js/index.js"></script>
 </body>
