--- a/projects/zoom/index.html
+++ b/projects/zoom/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h3>Zoom Effect</h3>
+    <h3>Hover over photo to zoom</h3>
     <div id="container">
         <div class="photo-container">
                 <div class="photo">
